# ChangeLog for net-im/kadu-panelkadu
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  kadu-panelkadu-0.6_rc1.ebuild, kadu-panelkadu-0.6.0_p1.ebuild,
  kadu-panelkadu-0.6.0_p2.ebuild, kadu-panelkadu-0.6.5_p2.ebuild,
  +metadata.xml:
  Some repoman fixes.

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl> Manifest:
  Removed remnants of rc2 from Manifest.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-panelkadu-0.6.0_p2.ebuild:
  Bumped.

  07 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  kadu-panelkadu-0.6_rc1.ebuild, kadu-panelkadu-0.6.0_p1.ebuild:
  Fixed missing MOD_LDFLAGS.

  07 Jun 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-panelkadu-0.6.0_p1.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-panelkadu-0.6_beta3.ebuild:
  Removed cruft.

  31 Mar 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-panelkadu-0.6_rc1.ebuild:
  Bumped
