@@ -5,5 +5,5 @@ DIST panelkadu-0.6.5-3.tar.gz 6747 RMD160 ebabc7bd39b906a8e245acc5c1e38906081316
 EBUILD kadu-panelkadu-0.6.0_p2.ebuild 393 RMD160 f5f192a8cba1226750fc78df952fd92dc127a0e2 SHA1 6eed4fe4cf3c78146ef8e6879024629b4639d7a6 SHA256 8d5e85207a17c0e4275949bb006ed48aa4d3ad0ec985f3fc37b7976c68412b7b
 EBUILD kadu-panelkadu-0.6.5_p2.ebuild 355 RMD160 52a306e0d3705f4ace6cb9430da17dea3dfe144d SHA1 afcedd36137c9c5d37134761695548fbf44bd804 SHA256 1c6987412eef05e4ad93df7c5e54afc70c3a4f5bfb86bed14c1a4302635eccf4
 EBUILD kadu-panelkadu-0.6.5_p3.ebuild 355 RMD160 52a306e0d3705f4ace6cb9430da17dea3dfe144d SHA1 afcedd36137c9c5d37134761695548fbf44bd804 SHA256 1c6987412eef05e4ad93df7c5e54afc70c3a4f5bfb86bed14c1a4302635eccf4
-MISC ChangeLog 973 RMD160 8ec87b7ac293fe918b2c84c95f8d28a2fd9902e6 SHA1 f34be31b9eef8d24eac9bf301ef0181aa7aafa73 SHA256 6dbf5f07eafd605a743d3581fe038b0034d75d547f177dc1e0f32ebe3a28c042
+MISC ChangeLog 1068 RMD160 ec734c5223f3569a6f4785990d6e0477fa70822c SHA1 8c490b6733485675c25baebdb8e32cac367cae4b SHA256 b5cc3d640bd8591780b6e4f255174c1e93e46f7ae99816c555f266dbd61417c4
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
