@@ -1,0 +1,17 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+inherit kadu-base
+
+MOD_URI="http://www.ultr.pl/kadu/${NAME}-${PV/_p/-}.tar.gz"
+MOD_TYPE="ext"
+
+inherit kadu-mod
+
+DESCRIPTION="Makes Kadu look and behave like a panel"
+HOMEPAGE="http://www.ultr.pl/kadu/"
+KEYWORDS="amd64 x86"
+
+IUSE=""
+
