@@ -3,6 +3,10 @@
 # $Header: $
 
   25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  +kadu-panelkadu-0.6.5_p3.ebuild:
+  Bumped.
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
   kadu-panelkadu-0.6_rc1.ebuild, kadu-panelkadu-0.6.0_p1.ebuild,
   kadu-panelkadu-0.6.0_p2.ebuild, kadu-panelkadu-0.6.5_p2.ebuild,
   +metadata.xml:
